--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <h4 class="mt-3">MRZ</h4>
         <div class="form-group">
-            <textarea id="extracted-text" class="form-control" style="width: 300px; font-size: 12px; font-family: monospace; overflow: hidden; resize: none;"></textarea>
+            <textarea id="extracted-text" class="form-control" style="width: 18.5rem; font-size: 0.7rem; font-family: monospace; overflow: hidden; resize: none;"></textarea>
         </div>
         <input id="file" type="file" class="d-none" onchange="handleChange(event)" />
     </main>
